--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul>
             <li>
               <img
-                src="images/what_we_do/computer.jpg"
+                src="images/whatwedo/computer.jpg"
                 alt="computer"
                 width="370"
                 height="294"
@@ -75,15 +75,15 @@
             </li>
             <li>
               <img
-                src="images/what_we_do/mobilePhone.jpg"
-                alt="mobilePhone"
+                src="images/whatwedo/mobilephone.jpg"
+                alt="mobilephone"
                 width="370"
                 height="294"
               />
             </li>
             <li>
               <img
-                src="images/what_we_do/tablet.jpg"
+                src="images/whatwedo/tablet.jpg"
                 alt="tablet"
                 width="370"
                 height="294"
@@ -99,8 +99,8 @@
           <ul>
             <li>
               <img
-                src="images/our_team/Product_Designer.jpg"
-                alt="John_Doe_Product_Designer"
+                src="images/ourteam/productdesigner.jpg"
+                alt="johndoeproductdesigner"
                 width="270"
                 height="260"
               />
@@ -109,8 +109,8 @@
             </li>
             <li>
               <img
-                src="images/our_team/Frontend_Developer.jpg"
-                alt="John_Doe_Frontend_Developer"
+                src="images/ourteam/frontenddeveloper.jpg"
+                alt="johndoefrontenddeveloper"
                 width="270"
                 height="260"
               />
@@ -119,8 +119,8 @@
             </li>
             <li>
               <img
-                src="images/our_team/Marketing.jpg"
-                alt="John_Doe_Marketing"
+                src="images/ourteam/marketing.jpg"
+                alt="johndoemarketing"
                 width="270"
                 height="260"
               />
@@ -129,8 +129,8 @@
             </li>
             <li>
               <img
-                src="images/our_team/UI_Designer.jpg"
-                alt="John_Doe_UI_Designer"
+                src="images/ourteam/uidesigner.jpg"
+                alt="johndoeuidesigner"
                 width="270"
                 height="260"
               />
